# pgdrift

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
crates/pgdrift/: Cargo.toml
crates/pgdrift-cli/: Cargo.toml
crates/pgdrift-cli/src/: lib.rs  main.rs  output.rs
crates/pgdrift-cli/src/commands/: discover.rs  mod.rs
crates/pgdrift-cli/tests/: analyze_integration_test.rs  discover_integration_test.rs  index_integration_test.rs
crates/pgdrift-core/: Cargo.toml
crates/pgdrift-core/src/: analyzer.rs  drift.rs  index.rs  lib.rs  stats.rs  types.rs
crates/pgdrift-core/tests/: integration_test.rs
crates/pgdrift-db/: Cargo.toml
crates/pgdrift-db/src/: connection.rs  discovery.rs  fixtures.rs  lib.rs  sampler.rs  test_utils.rs
crates/pgdrift-db/tests/: integration_test.rs
crates/pgdrift/src/: lib.rs  main.rs  output.rs
crates/pgdrift/src/commands/: analyze.rs  index.rs  mod.rs  scan_all.rs
crates/pgdrift/tests/: analyze_integration_test.rs  discover_integration_test.rs  index_integration_test.rs  scan_all_integration_test.rs
