[workspace]
members = [
  "crates/pgdrift-cli",
  "crates/pgdrift-core",
  "crates/pgdrift-db",
]
resolver = "2"


[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.20"       # ASCII tables
colored = "3.0"       # Terminal colors
indicatif = "0.18"    # Progress bars

# JSON
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
