[workspace]
members = [
  "crates/pgdrift",
  "crates/pgdrift-core",
  "crates/pgdrift-db",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/capybarastack/pgdrift"
homepage = "https://github.com/capybarastack/pgdrift"
authors = ["Moeder Balla"]
keywords = ["postgresql", "jsonb", "schema", "drift", "database"]
categories = ["command-line-utilities", "database"]


[workspace.dependencies]
# Internal crates
pgdrift-core = { version = "0.1.1", path = "crates/pgdrift-core" }
pgdrift-db = { version = "0.1.1", path = "crates/pgdrift-db" }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "tls-rustls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
tabled = "0.20"       # ASCII tables
colored = "3.1"       # Terminal colors
indicatif = "0.18"    # Progress bars

# JSON
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
