[package]
name = "pgdrift-cli"
version.workspace = true
edition = "2024"

[lib]
name = "pgdrift_cli"
path = "src/lib.rs"

[[bin]]
name = "pgdrift"
path = "src/main.rs"

[dependencies]
pgdrift-core = { workspace = true }
pgdrift-db = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
tabled = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
sqlx = { workspace = true }
