[package]
name = "pgdrift-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core will handle migrations, schema diffing, etc.
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pgdrift-db = { path = "../pgdrift-db" }
sqlx = { workspace = true }
