[package]
name = "pgdrift-core"
version.workspace = true
edition = "2024"

[dependencies]
# Core will handle migrations, schema diffing, etc.
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pgdrift-db = { workspace = true }
sqlx = { workspace = true }
