[package]
name = "pgdrift-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core analysis engine for pgdrift - JSONB schema drift detection algorithms"

[dependencies]
# Core will handle migrations, schema diffing, etc.
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pgdrift-db = { workspace = true }
sqlx = { workspace = true }
