[package]
name = "pgdrift-db"
version.workspace = true
edition = "2024"

[dependencies]
# DB layer handles PostgreSQL connections
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }  # Progress bars
futures = "0.3"  # For stream processing
testcontainers = "0.26"  # For test utilities
serde = { version = "1.0", features = ["derive"] }
