[package]
name = "pgdrift-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Database layer for pgdrift - PostgreSQL connection handling and sampling strategies"

[dependencies]
# DB layer handles PostgreSQL connections
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }  # Progress bars
futures = "0.3"  # For stream processing
testcontainers = "0.27"  # For test utilities
serde = { version = "1.0", features = ["derive"] }
