[package]
name = "pgdrift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line tool for detecting schema drift in PostgreSQL JSONB columns"

[lib]
name = "pgdrift"
path = "src/lib.rs"

[[bin]]
name = "pgdrift"
path = "src/main.rs"

[dependencies]
pgdrift-core = { workspace = true }
pgdrift-db = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
tabled = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
sqlx = { workspace = true }
